--- a/todo-list/main.css
+++ b/todo-list/main.css
@@ -1,41 +1,34 @@
-body {
-    background-color: rgb(255, 161, 180);
-}
-#container {
-    width: 500px;
-    height: 300px;
-    margin-top: 300px;
+#container{
+    width: 1000px;
+    height: 500px;
+    background-color:cornsilk;
+    margin-top:200px;
     text-align: center;
 }
-#title {
-    color: #fff;
-}
-#sub-container{
-    width: 500px;
-    height: 300px;
-    background-color: #fff;
-    border: 3px solid deeppink;
-    border-radius: 20px;
-}
-#list-group{
-    padding-top: 20px;
-}
-.list-group-item{
-    border: none !important;
-    border-bottom: 1px solid #eee !important;
-}
-#input-area {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-#input-group {
-    margin-top: 10px;
+
+#find-todolist{
+    margin-top: 50px;
 }
 
-#button-area{
-    border:none;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    background-color: purple;
-    color: #eee;
+#TODOLIST{
+    font-family: 'Black Han Sans', sans-serif;
+    letter-spacing: 5px; 
+}
+
+#input-group{
+    padding-top: 50px;
+}
+
+#button{
+    background-color: black;
+    color: fff;
+}
+
+.find-btn{
+    text-align: right;
+}
+
+#button1{
+    background-color: fff;
+    color: black;
 }
